--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       # https://docs.github.com/en/actions/guides/caching-dependencies-to-speed-up-workflows
       - name:  Virtual ENV
         uses: actions/cache@v2
-        id: cache-venv # name for referring later
+        id: cache-venv
         with:
           path: venv # what we cache: the Virtual ENV
           # The cache key depends on requirements.txt
