--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
         if: steps.cache-venv.outputs.cache-hit != 'true'
 
       - name: Run Tests   
-        # Note that you have to activate the virtualenv in every step
+        # #Note that you have to activate the virtualenv in every step
         # because GitHub actions doesn't preserve the environment   
         run: . venv/bin/activate && pytest
       - name: Create archive of dependencies
