--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,20 +3,19 @@ name: FastAPI CI/CD
 on:
   # Trigger the workflow on push
   push:
-    branches: 
+    branches:
       # Push events on main branch
-      - master 
+      - master
 
 # The Job defines a series of steps that execute on the same runner.
 jobs:
-
   CI:
     # Define the runner used in the workflow
     runs-on: ubuntu-latest
-    steps:   
+    steps:
       # Check out repo so our workflow can access it
       - uses: actions/checkout@v2
-      
+
       # Step-1 Setup Python
       - name: Set up Python
         # This action sets up a Python environment for use in actions
@@ -32,7 +31,7 @@ jobs:
 
       ## Step-3 Setup Virtual ENV
       # https://docs.github.com/en/actions/guides/caching-dependencies-to-speed-up-workflows
-      - name:  Virtual ENV
+      - name: Virtual ENV
         uses: actions/cache@v2
         id: cache-venv
         with:
@@ -47,9 +46,9 @@ jobs:
         run: python -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
         if: steps.cache-venv.outputs.cache-hit != 'true'
 
-      - name: Run Tests   
+      - name: Run Tests
         # #Note that you have to activate the virtualenv in every step
-        # because GitHub actions doesn't preserve the environment   
+        # because GitHub actions doesn't preserve the environment
         run: . venv/bin/activate && pytest
       - name: Create archive of dependencies
         run: |
@@ -81,13 +80,13 @@ jobs:
         with:
           name: api
       - name: Upload to S3
-        run: aws s3 cp api.zip s3://fastapifunctions/api.zip
+        run: aws s3 cp api.zip s3://versioningbucket101/api.zip
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
       - name: Deploy new Lambda
-        run: aws lambda update-function-code --function-name slsFast --s3-bucket fastapifunctions --s3-key api.zip
+        run: aws lambda update-function-code --function-name MockAPIAQ --s3-bucket versioningbucket101 --s3-key api.zip
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
